Fix Github logo appearance for users of dark mode

--- a/documentation/css/custom.css
+++ b/documentation/css/custom.css
@@ -49,3 +49,11 @@ aside#table-of-contents {
 div#content {
     grid-area: content;
 }
+
+path {
+    fill: black;
+}
+
+@media (prefers-color-scheme: dark) {
+    path { fill: white; }
+}
